# ARiewauh

./: README.md  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  local.properties  proguard-rules.pro  zuoxiong.jks
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fmDrawer.cpp  fmDrawer.h  fmDrawerGray.cpp  fmDrawerGray.h  fmDrawerPoints.cpp  fmDrawerPoints.h  fmDrawerYUV.cpp  fmDrawerYUV.h  fmEngine.cpp  fmEngine.h  fmPlatform_ANDROID.h  fmProgram.cpp  fmProgram.h  fmShaderLoader.cpp  fmShaderLoader.h  fmSharedGLContext.cpp  fmSharedGLContext.h  fmSharedGLContextWrapper.cpp  fmSharedGLContextWrapper.h  pch.h
app/src/main/java/com/appmagics/demo/: DemoActivity.java  Engine.java  MaCamera.java  MyGLUtils.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
